<resources>
    <string name="app_name">app</string>
    <string name="app_logo">FastFood Logo</string>
    <string name="login_title">Welcome to CE-CKHE</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">LOGIN</string>
    <string name="or">OR</string>
    <string name="create_account">CREATE NEW ACCOUNT</string>
    <string name="register_title">Create New Account</string>
    <string name="name_hint">Full Name</string>
    <string name="phone_hint">Phone Number</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="register">REGISTER</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="login_here">Login here</string>
    <string name="navigation_drawer_open">Mở menu</string>
    <string name="navigation_drawer_close">Đóng menu</string>

</resources>